[package]
name = "consensus"
version = "6.7.2-beta.1"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["cargo"] }
tonic = "0.10"
toml = "0.8"
rand = "0.8"
# `release_max_level_trace` enables configuring log level at runtime.
slog = { version = "2.7", features = ["release_max_level_trace"] }
sloggers = "2.1"
log = "0.4"
hex = "0.4"
raft = { git = "https://github.com/JLerxky/raft-rs", default-features = false, features = ["prost-codec"] }
prost = "0.12"
tokio = { version = "1.32", features = ["fs", "io-util", "rt", "macros"] }
serde = "1.0"
bytes = "1.5"
tower = "0.4"
flume = "0.11"

cloud-util = "0.8.0-beta.1"
cita_cloud_proto = "=6.7.2-beta.1"

[dev-dependencies]
tempfile = "3.8"
