[package]
name = "consensus"
version = "6.7.4"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
tonic = "0.12"
toml = "0.8"
rand = "0.8"
# `release_max_level_trace` enables configuring log level at runtime.
slog = { version = "2.7", features = ["release_max_level_trace"] }
sloggers = "2.2"
log = "0.4"
hex = "0.4"
raft = { git = "https://github.com/JLerxky/raft-rs", default-features = false, features = ["prost-codec"] }
prost = "0.13"
tokio = { version = "1.41", features = ["fs", "io-util", "rt", "macros"] }
serde = "1.0"
bytes = "1.8"
tower = "0.5"
flume = "0.11"

cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }

[dev-dependencies]
tempfile = "3.13"
